1.1.0 双栈隔离版：老版本走v1.0.9（b1.7.3实测正常），高版本(1.20.5+)走隔离的LWJGL3.3.3（含locale/-Xint/JNA修复，1.20.6已到GL Caps）；渲染桥待配套隔离（pojavSetWindowHint）